<resources>
    <string name="app_name">MAX</string>
    <string name="file">Файлы</string>
    <string name="galery">Галерея</string>
    <string name="photo">Камера</string>
    <string name="massage">Сообщение</string>
    <string name="hello">Выкладывай кто ты блять такой</string>
    <string name="go">Начать долбить ass</string>
    <string name="name">Твое имя</string>
    <string name="error_reg">ты ввел не существующую почту  </string>
    <string name="error_aut">не правильная почта или пароль </string>
    <string name="password"> пароль </string>
    <string name="email"> пошта? </string>
    <string name="auoriz"> местный я </string>
    <string name="title_autoriz"> точно местный или пиздишь ?  </string>
    <string name="exit"> Пойти нахуй  </string>
</resources>